@@ -9,8 +9,8 @@ import static org.testng.AssertJUnit.assertEquals;
 
 import org.testng.annotations.Test;
 
+import com.opengamma.strata.collect.array.DoubleArray;
 import com.opengamma.strata.collect.tuple.DoublesPair;
-import com.opengamma.strata.math.impl.matrix.DoubleMatrix1D;
 
 /**
  * Set up a simple parameterised surface (based on the function a * Math.sin(b * x + c * y) + Math.cos(y), where a, b, & c are the parameters)
@@ -29,7 +29,7 @@ public class ParameterizedSurfaceTest {
     final ParameterizedSurface testSurface = new ParameterizedSurface() {
 
       @Override
-      public Double evaluate(final DoublesPair xy, final DoubleMatrix1D parameters) {
+      public Double evaluate(final DoublesPair xy, final DoubleArray parameters) {
         assertEquals(3, parameters.size());
         final double a = parameters.get(0);
         final double b = parameters.get(1);
@@ -43,35 +43,38 @@ public class ParameterizedSurfaceTest {
       }
     };
 
-    final ParameterizedFunction<DoublesPair, DoubleMatrix1D, DoubleMatrix1D> parmSense = new ParameterizedFunction<DoublesPair, DoubleMatrix1D, DoubleMatrix1D>() {
+    final ParameterizedFunction<DoublesPair, DoubleArray, DoubleArray> parmSense =
+        new ParameterizedFunction<DoublesPair, DoubleArray, DoubleArray>() {
 
-      @Override
-      public DoubleMatrix1D evaluate(final DoublesPair xy, final DoubleMatrix1D parameters) {
-        final double a = parameters.get(0);
-        final double b = parameters.get(1);
-        final double c = parameters.get(2);
-        final DoubleMatrix1D res = new DoubleMatrix1D(Math.sin(b * xy.getFirst() + c * xy.getSecond()), xy.getFirst() * a * Math.cos(b * xy.getFirst() + c * xy.getSecond()), xy.getSecond() * a *
-            Math.cos(b * xy.getFirst() + c * xy.getSecond()));
-        return res;
-      }
+          @Override
+          public DoubleArray evaluate(final DoublesPair xy, final DoubleArray parameters) {
+            double a = parameters.get(0);
+            double b = parameters.get(1);
+            double c = parameters.get(2);
+            DoubleArray res = DoubleArray.of(
+                Math.sin(b * xy.getFirst() + c * xy.getSecond()),
+                xy.getFirst() * a * Math.cos(b * xy.getFirst() + c * xy.getSecond()), xy.getSecond() * a *
+                    Math.cos(b * xy.getFirst() + c * xy.getSecond()));
+            return res;
+          }
 
-      @Override
-      public int getNumberOfParameters() {
-        return 3;
-      }
-    };
+          @Override
+          public int getNumberOfParameters() {
+            return 3;
+          }
+        };
 
-    final DoubleMatrix1D params = new DoubleMatrix1D(0.7, -0.3, 1.2);
-    final Function1D<DoublesPair, DoubleMatrix1D> paramsSenseFD = testSurface.getZParameterSensitivity(params);
-    final Function1D<DoublesPair, DoubleMatrix1D> paramsSenseAnal = parmSense.asFunctionOfArguments(params);
+    final DoubleArray params = DoubleArray.of(0.7, -0.3, 1.2);
+    final Function1D<DoublesPair, DoubleArray> paramsSenseFD = testSurface.getZParameterSensitivity(params);
+    final Function1D<DoublesPair, DoubleArray> paramsSenseAnal = parmSense.asFunctionOfArguments(params);
 
     for (int i = 0; i < 20; i++) {
       final double x = Math.PI * (-0.5 + i / 19.);
       for (int j = 0; j < 20; j++) {
         final double y = Math.PI * (-0.5 + j / 19.);
         final DoublesPair xy = DoublesPair.of(x, y);
-        final DoubleMatrix1D s1 = paramsSenseAnal.evaluate(xy);
-        final DoubleMatrix1D s2 = paramsSenseFD.evaluate(xy);
+        final DoubleArray s1 = paramsSenseAnal.evaluate(xy);
+        final DoubleArray s2 = paramsSenseFD.evaluate(xy);
         for (int k = 0; k < 3; k++) {
           assertEquals(s1.get(k), s2.get(k), 1e-10);
         }
